objects/CCA2_Account_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CCA2_Account_Goals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCA2_Goal__c</fullName>
        <label>CCA2_Goal</label>
        <referenceTo>CCA2_Goal__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>CCA2_Account_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CCA2_Goal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CCA2_Account Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>